matching ones everywhere

--- a/committee.tex
+++ b/committee.tex
@@ -1,6 +1,6 @@
 % !TEX root = thesis.tex
 
-\chapter{The derivations of the patterns}\label{ch:relativization}
+\chapter{The committee}\label{ch:relativization}
 
 In the previous chapter I showed that languages with case competition come in two variants. First, there are languages that allow the internal and external case to surface when they win the competition, such as Gothic and Old High German. Second, there are languages that only allow the internal case to surface when it wins the competition, such as Modern German. Crucially, there is no language that only allows the external case to surface when it wins the competition.
 
