--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -156,6 +156,12 @@
   tag = abbr
 }
 
+\DeclareAcronym{imp}{
+  short = \tsc{imp} ,
+  long  = imperative ,
+  tag = abbr
+}
+
 \DeclareAcronym{prog}{
   short = \tsc{prog} ,
   long  = progressive ,
@@ -300,6 +306,12 @@
 \DeclareAcronym{nib}{
   short = Nib. ,
   long  = Das Nibelungenlied ,
+  tag = texts
+}
+
+\DeclareAcronym{hel}{
+  short = Hel. ,
+  long  = Heliand ,
   tag = texts
 }
 
