--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -23,47 +23,54 @@ The description of Gothic is mostly based on \citep{harbert1978}. The spelling o
 <http://www.wulfila.be>
 } The glossing comes from the detailed tagging on that same website. The translations are my own.
 
-Let me first
+Let me first..
 
-Consider the example in \ref{ex:gothicnomnom}, in which the internal case and the external case are nominative.
+Consider the example in \ref{ex:gothic-nom-nom}, in which the internal case and the external case are nominative.
 The relative clause, including the relative pronoun, is marked in gray.
-The internal case is nominative. The predicate \tit{matjai} `eats' takes nominative subjects.
-The external case is nominative as well. Here the predicate \tit{gadauþnai} `die' takes nominative subjects.
+The internal case is nominative. The predicate \tit{matjan} `to eat' takes nominative subjects.
+The external case is nominative as well. Here the predicate \tit{ ga-dauþnan} `to die' takes nominative subjects.
 The relative pronoun \tit{sa} `who.\ac{nom}' appears in the nominative.
 
-\exg. ei \tcol{DG}{sa} \tcol{DG}{-ei} \tcol{DG}{þis} \tcol{DG}{matjai}, ni gadauþnai\\
-that who.\ac{nom} -\ac{comp} {of this} eats\scsub{[nom]} not die\scsub{[nom]}\\
-`that (he) who eats of this may not die' \flushfill{Gothic, \ac{john} 6:50, after \pgcitealt{harbert1978}{337}}\label{ex:gothicnomnom}
+\exg. ei \tbf{sa} \tbf{-ei} \tbf{þis} \tbf{matjai}, ni gadauþnai\\
+\ac{comp} \ac{rel}.\ac{sg}.\ac{m}.\ac{nom} -\ac{comp} \ac{dem}.\ac{sg}.\ac{m}.\ac{gen} eat.\ac{opt}.3\ac{sg}\scsub{[nom]} not die.\ac{opt}.3\ac{sg}\scsub{[nom]}\\
+`that the one, who eats of this may not die' \flushfill{Gothic, \ac{john} 6:50, after \pgcitealt{harbert1978}{337}}\label{ex:gothic-nom-nom}
 
-Consider the example in \ref{ex:gothicaccaccrep}, repeated from the introduction. In this example, the internal case and the external case are accusative.
+Consider the example in \ref{ex:gothic-acc-acc-rep}, repeated from the introduction. In this example, the internal case and the external case are accusative.
 The relative clause, including the relative pronoun, is marked in gray.
-The internal case is accusative. The predicate \tit{arma} `pity' takes accusative objects.
-The external case is accusative as well. Here the predicate \tit{gaarma} `pity' takes accusative objects.
+The internal case is accusative. The predicate \tit{arman} `to pity' takes accusative objects.
+The external case is accusative as well. Here the predicate \tit{ga-arman} `to pity' takes accusative objects.
 The relative pronoun \tit{þan(a)} `who.\ac{acc}' appears in the accusative.
 
-\exg. gaarma \tcol{DG}{þan} \tcol{DG}{-ei} \tcol{DG}{arma}\\
- pity\scsub{[acc]} who.\ac{acc} -\ac{comp} pity\scsub{[acc]}\\
- `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothicaccaccrep}
+The internal case is accusative. The predicate \tit{bleiþjan} `to have mercy on' takes accusative objects.
+The external case is accusative as well. Here the predicate \tit{ga-bleiþjan} `to have mercy on' takes accusative objects.
 
-Consider the examples in \ref{ex:gothicdatdat}, in which the internal case and the external case are dative.
+\ex.\label{ex:gothicaccaccrep}
+\ag. gaarma \tbf{þan} \tbf{-ei} \tbf{arma}\\
+ pity.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} pity.1\ac{sg}\scsub{[acc]}\\
+ `I pity him, whom I pity'
+\bg. jah gableiþja \tbf{þan} \tbf{-ei} \tbf{bleiþja}\\
+ {have mercy}.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} {have mercy}.1\ac{sg}\scsub{[acc]}\\
+ `I have mercy on him, whom I have mercy on' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}
+
+Consider the examples in \ref{ex:gothic-dat-dat}, in which the internal case and the external case are dative.
 The relative clauses, including the relative pronoun, is marked in gray.
 The internal case is dative. The predicates \tit{gabaur} `tribute', \tit{mota} `custom', \tit{agis} `fear' and \tit{sweriþa} `honour' takes dative objects.
 The external case is dative as well. The same predicates as in the relative clause take dative objects.
 The relative pronouns \tit{þamm(a)} `who.\ac{dat}' appear in the dative.
 
 \ex.\label{ex:gothicdatdat}
-\ag. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{gabaur} gabaur\\
-who.\ac{dat} -\ac{comp} tribute\scsub{[dat]} tribute\scsub{[dat]}\\
-`tribute to (him) whom tribute is due'
-\bg. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{mota} mota\\
-\tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{custom\scsub{[dat]}} custom\scsub{[dat]}\\
-`custom to (him) whom custom is due'
-\bg. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{agis} agis\\
-\tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{fear\scsub{[dat]}} fear\scsub{[dat]}\\
-`fear (him) whom fear is due'
-\bg. \tcol{DG}{þamm} \tcol{DG}{-ei} \tcol{DG}{sweriþa} sweriþa\\
-\tcol{DG}{who.\ac{dat}} \tcol{DG}{-\ac{comp}} \tcol{DG}{honour\scsub{[dat]}} honour\scsub{[dat]}\\
-`honour (him) whom honour is due' \flushfill{Gothic, \ac{rom} 13:7, after \pgcitealt{harbert1978}{339}}
+\ag. \tbf{þamm} \tbf{-ei} \tbf{gabaur} gabaur\\
+ \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} tribute\scsub{[dat]} tribute\scsub{[dat]}\\
+ `tribute to (him) whom tribute is due'
+\bg. \tbf{þamm} \tbf{-ei} \tbf{mota} mota\\
+ \tbf{who.\ac{dat}} \tbf{-\ac{comp}} \tbf{custom\scsub{[dat]}} custom\scsub{[dat]}\\
+ `custom to (him) whom custom is due'
+\bg. \tbf{þamm} \tbf{-ei} \tbf{agis} agis\\
+ \tbf{who.\ac{dat}} \tbf{-\ac{comp}} \tbf{fear\scsub{[dat]}} fear\scsub{[dat]}\\
+ `fear (him) whom fear is due'
+\bg. \tbf{þamm} \tbf{-ei} \tbf{sweriþa} sweriþa\\
+ \tbf{who.\ac{dat}} \tbf{-\ac{comp}} \tbf{honour\scsub{[dat]}} honour\scsub{[dat]}\\
+ `honour (him) whom honour is due' \flushfill{Gothic, \ac{rom} 13:7, after \pgcitealt{harbert1978}{339}}
 
 
 \begin{table}[H]
@@ -785,9 +792,9 @@ The third person singular and first person plural show the same pattern. The acc
             & luw\tbf{-e:l}
             & muŋ\tbf{-e:w}                           \\
             \cmidrule(lr){4-4}
-  \ac{dat}  & ma:\tbf{-ne:m}\tcol{DG}{\tbf{-na}}
-            & luw\tbf{-e:l}\tcol{DG}{\tbf{-na}}
-            & muŋ\tbf{-e:w}\tcol{DG}{\tbf{-na}}       \\
+  \ac{dat}  & ma:\tbf{-ne:m}\tbf{\tbf{-na}}
+            & luw\tbf{-e:l}\tbf{\tbf{-na}}
+            & muŋ\tbf{-e:w}\tbf{\tbf{-na}}       \\
   \bottomrule
   \end{tabular}
   \label{tbl:cont-khanty}
