--- a/thesis.tex
+++ b/thesis.tex
@@ -46,8 +46,8 @@
 \include{case-decomposition}
 
 \part{The variation}\label{part:variation}
-\include{two-attested-patterns}
-\include{excluding-the-third-pattern}
+\include{case-competition-typology}
+\include{committee}
 
 \bookmarksetup{startatroot}
 \include{discussion}
