--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -206,7 +206,7 @@ This section discusses the situation in which the internal case or the external 
     \label{tbl:case-competition-int-ext-repeated}
 \end{table}
 
-Two examples of languages that show this pattern are Gothic and Old High German. I repeat the findings from Gothic (from \ref{ch:recurring}), and I present the data for Old High German, which is the result of my own research
+Two examples of languages that show this pattern are Gothic and Old High German. I repeat the findings from Gothic (from \ref{ch:recurring}), and I present the data for Old High German, which is the result of my own research.
 
 In \ref{ch:recurring}, I discussed case competition between nominative, accusative and dative case in Gothic headless relatives, based on the work of \citet{harbert1978}. I repeat the results in Table \ref{tbl:summary-gothic-repeated} from Table \ref{tbl:summary-gothic-simple}.
 
@@ -225,6 +225,29 @@ A common observation is that case attraction in headed relatives in Old High Ger
 What, to my knowledge, has not been studied systematically is whether Old High German headless relatives allow the internal case and the external case to surface when either of them wins the case competition. This is what I investigated in my work.
 }
 The examples follow the spelling and the detailed glosses in ANNIS. The translations are my own.
+
+\tit{queman} `to come' takes nominative subjects.
+\tit{senten} `to send' takes nominative subjects.
+
+\exg. quham \tbf{dher} \tbf{chisendit} \tbf{scolda} \tbf{uuerdhan}\\
+ come.\ac{pst}.3\ac{sg}\scsub{nom} \ac{rel}.\ac{sg}.\ac{m}.\ac{nom} send.\ac{pst}.\ac{ptcp}\scsub{nom} should.\ac{pst}.3\ac{sg} become.\ac{inf}\\
+ `the one, who should have been sent, came' \flushfill{Old High German, \ac{isid} 35:5}\label{ex:ohg-nom-nom}
+
+\tit{gihoren} `to listen to' takes accusative objects.
+\tit{quedan} `to speak' takes accusative objects.
+
+\exg. gihortut ir \tbf{thiu} \tbf{ih} \tbf{íu} \tbf{quad}\\
+ listen.\ac{pst}.2\ac{pl}\scsub{acc} 2\ac{pl}.\ac{nom} \ac{rel}.\ac{pl}.\ac{m}.\ac{nom} 1\ac{sg}.\ac{nom} 2\ac{pl}.\ac{dat} speak.\ac{pst}.1\ac{sg}\scsub{acc}\\
+ `you listened to those things, that I said to you' \flushfill{Old High German, \ac{tatian} 165:6}\label{ex:ohg-acc-acc}
+
+I could find an example from the `Heliand', an Old Saxon text written around the same time as the other works I give examples from. Old Saxon is linguistically speaking the closest relative of Old High German.
+
+\tit{seggian} `to say' takes dative indirect objects.
+\tit{willian} `to wish' takes dative objects.
+
+\exg. sagda \tbf{them} \tbf{siu} \tbf{uuelda}\\
+ say.\ac{pst}.3\ac{sg}\scsub{dat} \ac{rel}.\ac{pl}.\ac{m}.\ac{nom} 3\ac{sg}.\ac{f}.\ac{nom} wish.\ac{pst}.3\ac{sg}\scsub{dat}\\
+ `she said to those, whom she wished for' \flushfill{Old Saxon, \ac{hel} 4:293}\label{ex:os-dat-dat}
 
 I start with the competition between accusative and nominative. Following the case scale, the relative pronoun appears in accusative case and never in nominative. As Old High German allows the internal and external case to surface, the accusative surfaces when it is the internal case and when it is the external case.
 
@@ -444,17 +467,26 @@ This section discusses the situation in which only the internal case is allowed 
 
 An example of a language that shows this pattern is Modern German. In this section I discuss the Modern German data, based on the research of \citet{vogel2001}. %adapted from.. glosses translations judgements
 
+\tit{besuchen} `to visit' takes nominative subjects.
+\tit{mögen} `to like' takes nominative subjects.
+
 \exg. Uns besucht, \tbf{wer} \tbf{Maria} \tbf{mag}.\\
- 2\ac{pl}.\ac{acc} visit.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{an}.\ac{nom} Maria.\ac{acc} like.\ac{pres}.3\ac{sg}\scsub{[acc]}\\
+ 2\ac{pl}.\ac{acc} visit.\ac{pres}.3\ac{sg}\scsub{[nom]} \ac{rel}.\ac{an}.\ac{nom} Maria.\ac{acc} like.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
  `Who visits us likes Maria.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{343}}\label{ex:mg-nom-nom}
+
+\tit{einladen} `to invite' takes accusative objects.
+\tit{mögen} `to like' takes accusative objects.
 
 \exg. Ich lade ein, \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{mag}.\\
  1\ac{sg}.\ac{nom} invite.\ac{pres}.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{an}.\ac{acc} Maria.\ac{nom} like.\ac{pres}.3\ac{sg}\scsub{[acc]}\\
  `I invite who Maria also like.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-acc}
 
+\tit{vertrauen} `to trust' takes dative objects.
+\tit{gefällen} `to please' takes dative subjects.
+
 \exg. Ich vertraue, wem Maria gefällt\\
  1\ac{sg}.\ac{nom} trust.\ac{pres}.1\ac{sg}\scsub{[dat]} \ac{rel}.\ac{an}.\ac{dat} Maria.\ac{nom} please.\ac{pres}.3\ac{sg}\scsub{[dat]}.\\
- `I trust whoever pleases Maria.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-dat}
+ `I trust whoever Maria pleases.' \flushfill{Modern German, adapted from \pgcitealt{vogel2001}{345}}\label{ex:mg-dat-dat}
 
 I start with the competition between accusative and nominative. Following the case scale, the relative pronoun appears in accusative case and never in nominative. Following the internal-only requirement, only when the accusative case is the internal case, the sentence is grammatical.
 
@@ -868,6 +900,41 @@ This section discusses the situation in which neither the internal nor the exter
 \end{table}
 
 An example of a language that shows this pattern is Polish. In this section I discuss the Polish data, based on the research of \citet{citko2013} after \citet{himmelreich2017}. I only discuss the case competition between accusative and dative, as only this data is discussed. This does not change anything about the point I am making here: the only kind of system that is compatible with the examples given is the one in which neither the internal nor the external case is allowed to surface.
+
+\tit{lubić} takes accusative objects.
+
+\exg. Jan lubi \tbf{kogo} \tbf{-kolkwiek} \tbf{Maria} \tbf{lubi}.\\
+ Jan like.\tsc{3sg}\scsub{acc} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} ever Maria like.\tsc{3sg}\scsub{acc}\\
+ `Jan likes whoever Maria likes.' \flushfill{Polish, adapted from \citealt{citko2013} after \citealt{himmelreich2017}{17}}\label{ex:polish-acc-acc}
+
+\tit{pomagać} `to help' takes dative objects.
+\tit{ufać} `to trust' takes dative objects.
+
+\exg. Jan pomaga \tbf{komu} \tbf{-kolkwiek} ufa.\\
+ Jan help.\tsc{3sg}\scsub{dat} \tsc{rel}.\tsc{dat}.\tsc{m}.\tsc{sg} ever trust.\tsc{3sg}\scsub{dat}\\
+ `Jan helps whomever he trusts.' \flushfill{Polish, adapted from \citealt{citko2013} after \citealt{himmelreich2017}{17}}\label{ex:polish-dat-dat}
+
+ \begin{table}[H]
+   \center
+   \caption{Summary of Polish headless relatives}
+   \begin{tabular}{c|c|c}
+     \toprule
+     \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
+            & [\ac{acc}]
+            & [\ac{dat}]
+            \\ \cmidrule{1-3}
+        [\ac{acc}]
+            & \ac{acc}
+            &
+            \\ \cmidrule{1-3}
+        [\ac{dat}]
+            &
+            & \ac{dat}
+            \\
+      \bottomrule
+   \end{tabular}
+     \label{tbl:case-competition-polish-matching}
+ \end{table}
 
 I give examples from the case competition between accusative and dative. According to the case scale, the dative would win over the accusative. However, as neither the internal nor the external case are allowed to surface when they win the case competition, all examples are ungrammatical.
 
