matching added to recurring pattern
okido

--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -36,6 +36,12 @@
   tag = abbr
 }
 
+\DeclareAcronym{poss}{
+  short = \tsc{poss} ,
+  long  = possessive ,
+  tag = abbr
+}
+
 \DeclareAcronym{1}{
   short = 1 ,
   long  = first person ,
