--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -11,67 +11,44 @@ Then I show that this pattern is not unique to headless relatives. It appears in
 
 \section{In headless relatives}\label{sec:pattern-rels}
 
-As the name suggests, headless relatives are relative clauses that lack an (overt) head. The internal case, the case from the relative clause, and the external case, the case from the main clause, compete to surface on the relative pronoun. It has been argued in the literature that the two competing cases always adhere a to particular case scale \citep[cf.][]{harbert1978,pittner1995,vogel2001,grosu2003,caha2019,bergsma2019}. This is the scale I gave in the introduction, repeated here in \ref{ex:case-scale}. Elements more to the right on this scale win over elements more to the left on this scale.\footnote{
-In the literature about headless relatives, the genitive is often discussed together with the nominative, accusative and dative \citep[cf.][]{harbert1978,pittner1995}. In this dissertation I do not discuss the genitive. The reason is that I restrict myself to cases that appear in all possible case competition combinations. As the genitive does not fulfill that requirement, it is therefore excluded. In Chapter \ref{ch:discussion} I briefly return to the issue.
-}
+As the name suggests, headless relatives are relative clauses that lack an (overt) head. The internal case, the case from the relative clause, and the external case, the case from the main clause, compete to surface on the relative pronoun. In this section I first discuss examples in which the internal and the external match, and then examples in which they differ.
 
-\ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale}
-
-This can be reformulated as follows. In a competition, accusative wins over nominative, dative wins over nominative, and dative wins over accusative. In this section I illustrate this scale with examples. When two cases compete, the relative pronoun always appears in the case more to the right on the case scale. It does not matter whether it is the internal or the external case. I illustrate this with examples from headless relatives in Gothic.
+If the internal and the external case are identical, nothing special happens: the relative pronoun simply surfaces in that case. I illustrate this with examples from headless relatives in Gothic. I give examples in which the internal and external case are respectively nominative, accusative and dative. The relative pronoun appears in the respective cases.
 
 The description of Gothic is mostly based on \citep{harbert1978}. The spelling of the examples follows the Wulfila Project website.\footnote{
 <http://www.wulfila.be>
 } The glossing comes from the detailed tagging on that same website. The translations are my own.
 
-Let me first..
+Consider the example in \ref{ex:gothic-nom-nom}, in which the internal nominative case competes against the external nominative case.
+The internal case is nominative, as the predicate \tit{matjan} `to eat' takes nominative subjects.
+The external case is nominative as well, as the predicate \tit{ga-dauþnan} `to die' takes nominative subjects.
+The relative pronoun \tit{sa} `\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}' appears in the internal and external case: the nominative.
 
-Consider the example in \ref{ex:gothic-nom-nom}, in which the internal case and the external case are nominative.
-The relative clause, including the relative pronoun, is marked in gray.
-The internal case is nominative. The predicate \tit{matjan} `to eat' takes nominative subjects.
-The external case is nominative as well. Here the predicate \tit{ ga-dauþnan} `to die' takes nominative subjects.
-The relative pronoun \tit{sa} `who.\ac{nom}' appears in the nominative.
-
-\exg. ei \tbf{sa} \tbf{-ei} \tbf{þis} \tbf{matjai}, ni gadauþnai\\
+\exg. ei sa -ei þis matjai, ni gadauþnai\\
 \ac{comp} \ac{rel}.\ac{sg}.\ac{m}.\ac{nom} -\ac{comp} \ac{dem}.\ac{sg}.\ac{m}.\ac{gen} eat.\ac{opt}.3\ac{sg}\scsub{[nom]} not die.\ac{opt}.3\ac{sg}\scsub{[nom]}\\
 `that the one, who eats of this may not die' \flushfill{Gothic, \ac{john} 6:50, after \pgcitealt{harbert1978}{337}}\label{ex:gothic-nom-nom}
 
-Consider the example in \ref{ex:gothic-acc-acc-rep}, repeated from the introduction. In this example, the internal case and the external case are accusative.
-The relative clause, including the relative pronoun, is marked in gray.
-The internal case is accusative. The predicate \tit{arman} `to pity' takes accusative objects.
-The external case is accusative as well. Here the predicate \tit{ga-arman} `to pity' takes accusative objects.
-The relative pronoun \tit{þan(a)} `who.\ac{acc}' appears in the accusative.
+Consider the example in \ref{ex:gothic-acc-acc-rep}, in which the internal accusative case competes against the external accusative case.
+The internal case is accusative, as the predicate \tit{arman} `to pity' takes accusative objects.
+The external case is accusative as well, the predicate \tit{ga-arman} `to pity' takes accusative objects.
+The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{acc}' appears in the internal and external case: the accusative.
 
-The internal case is accusative. The predicate \tit{bleiþjan} `to have mercy on' takes accusative objects.
-The external case is accusative as well. Here the predicate \tit{ga-bleiþjan} `to have mercy on' takes accusative objects.
-
-\ex.\label{ex:gothicaccaccrep}
-\ag. gaarma \tbf{þan} \tbf{-ei} \tbf{arma}\\
+\exg. gaarma þan -ei arma\\
  pity.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} pity.1\ac{sg}\scsub{[acc]}\\
- `I pity him, whom I pity'
-\bg. jah gableiþja \tbf{þan} \tbf{-ei} \tbf{bleiþja}\\
- {have mercy}.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} {have mercy}.1\ac{sg}\scsub{[acc]}\\
- `I have mercy on him, whom I have mercy on' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}
+ `I pity him, whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothic-acc-acc-rep}
 
-Consider the examples in \ref{ex:gothic-dat-dat}, in which the internal case and the external case are dative.
-The relative clauses, including the relative pronoun, is marked in gray.
-The internal case is dative. The predicates \tit{gabaur} `tribute', \tit{mota} `custom', \tit{agis} `fear' and \tit{sweriþa} `honour' takes dative objects.
-The external case is dative as well. The same predicates as in the relative clause take dative objects.
-The relative pronouns \tit{þamm(a)} `who.\ac{dat}' appear in the dative.
+Consider the examples in \ref{ex:gothic-dat-dat}, in which the internal dative case competes against the external dative case.
+The internal case is accusative, as the predicate \tit{manwjan} `to prepare' takes dative indirect objects.
+The external case is accusative as well, the predicate \tit{giban} `to give' takes dative indirect objects.
+The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{acc}' appears in the internal and external case: the accusative.
 
-\ex.\label{ex:gothicdatdat}
-\ag. \tbf{þamm} \tbf{-ei} \tbf{gabaur} gabaur\\
- \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} tribute\scsub{[dat]} tribute\scsub{[dat]}\\
- `tribute to (him) whom tribute is due'
-\bg. \tbf{þamm} \tbf{-ei} \tbf{mota} mota\\
- \tbf{who.\ac{dat}} \tbf{-\ac{comp}} \tbf{custom\scsub{[dat]}} custom\scsub{[dat]}\\
- `custom to (him) whom custom is due'
-\bg. \tbf{þamm} \tbf{-ei} \tbf{agis} agis\\
- \tbf{who.\ac{dat}} \tbf{-\ac{comp}} \tbf{fear\scsub{[dat]}} fear\scsub{[dat]}\\
- `fear (him) whom fear is due'
-\bg. \tbf{þamm} \tbf{-ei} \tbf{sweriþa} sweriþa\\
- \tbf{who.\ac{dat}} \tbf{-\ac{comp}} \tbf{honour\scsub{[dat]}} honour\scsub{[dat]}\\
- `honour (him) whom honour is due' \flushfill{Gothic, \ac{rom} 13:7, after \pgcitealt{harbert1978}{339}}
+\exg. nist mein du giban, alja þaim -ei manwiþ was\\
+{is not} 1\ac{sg}.\ac{poss}.\ac{nom} to give.\ac{inf}\scsub{[dat]} {except for} \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} prepare.\ac{ptcp} be.\ac{pret}.3\ac{sg}\scsub{[dat]}\\
+`it is not mine to give except for to the one, for whom it was prepared'\flushfill{Gothic, \ac{mark} 10:49, after \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-dat}
 
+These findings can be summarized as in Table \ref{tbl:summary-gothic-matching}. The left column shows the internal case (\ac{int}) between square brackets. The upper row shows the external case (\ac{ext}) between square brackets. The other cells indicate the case of the relative pronoun.
+
+The diagonal from the top left to the bottom right corresponds to the examples given so far in which the internal and external case match. The nominative marked in light gray corresponds to \ref{ex:gothic-nom-nom}, in which the internal nominative case competes with the external nominative case, and the relative pronoun surfaces in the nominative case. The accusative marked in dark gray corresponds to \ref{ex:gothic-acc-acc}, in which the internal accusative case competes with the external accusative case, and the relative pronoun surfaces in the accusative case. The unmarked dative corresponds to \ref{ex:gothic-dat-dat}, in which the internal dative case competes with the external dative case, and the relative pronoun surfaces in the dative case.
 
 \begin{table}[H]
  \center
@@ -100,10 +77,17 @@ The relative pronouns \tit{þamm(a)} `who.\ac{dat}' appear in the dative.
          \\
    \bottomrule
  \end{tabular}
-   \label{tbl:summary-gothic-nom-acc}
+   \label{tbl:summary-gothic-matching}
 \end{table}
 
-From here the competition starts.
+In Table \ref{tbl:summary-gothic-matching}, six cells remain empty. These are the cases in which the internal and the external case differ.
+It has been argued in the literature that the two competing cases always adhere a to particular case scale \citep[cf.][]{harbert1978,pittner1995,vogel2001,grosu2003,caha2019,bergsma2019}. This is the scale I gave in the introduction, repeated here in \ref{ex:case-scale}. Elements more to the right on this scale win over elements more to the left on this scale.\footnote{
+In the literature about headless relatives, the genitive is often discussed together with the nominative, accusative and dative \citep[cf.][]{harbert1978,pittner1995}. In this dissertation I do not discuss the genitive. The reason is that I restrict myself to cases that appear in all possible case competition combinations. As the genitive does not fulfill that requirement, it is therefore excluded. In Chapter \ref{ch:discussion} I briefly return to the issue.
+}
+
+\ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale}
+
+This can be reformulated as follows. In a competition, accusative wins over nominative, dative wins over nominative, and dative wins over accusative. In this section I illustrate this scale with examples. When two differing cases compete, the relative pronoun always appears in the case more to the right on the case scale. It does not matter whether it is the internal or the external case.
 
 I start with the competition between accusative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in accusative case and never in nominative.
 
@@ -127,7 +111,7 @@ Examples in which the internal case is nominative, the external case is accusati
  and \ac{rel}.\ac{sg}.\ac{n}.\ac{acc} -\ac{comp} be.\ac{pres}.3\ac{sg}\scsub{[nom]} from Laodicea 2.\ac{pl}.\ac{nom} read.\scsub{[acc]}\\
  `and you read the one which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-nom-acc-rep}
 
-The two examples in which nominative and accusative compete are showed in Table \ref{tbl:summary-gothic-nom-acc}. The left column shows the internal case (\ac{int}) between square brackets. The upper row shows the external case (\ac{ext}) between square brackets. The other cells indicate the case of the relative pronoun. The diagonal is crossed out, because these are instances in which the internal and external case match, and there is no case competition taking place. The remaining six cells show instances where the internal and external case differ. Within the cells, two cases are given. The case in the lower left corner stands for the relative pronoun in the internal case. The case in the upper right corner stands for the relative pronoun in the external case. The grammatical examples are marked in (light or dark) gray. The unattested examples are marked with an asterix and are unmarked.\footnote{
+The two examples in which nominative and accusative compete are showed in Table \ref{tbl:summary-gothic-nom-acc}. Within the newly filled out cells, two cases are given. The case in the lower left corner stands for the relative pronoun in the internal case. The case in the upper right corner stands for the relative pronoun in the external case. The grammatical examples are marked in (light or dark) gray. The unattested examples are marked with an asterix and are unmarked.\footnote{
 Throughout this dissertation * stands for 'not found in natural language'. For extinct languages this means that there are no attested examples. For non-extinct languages it means that the examples are ungrammatical.
 }
 
