--- a/thesis.tex
+++ b/thesis.tex
@@ -45,7 +45,7 @@
 \include{recurring-pattern}
 \include{case-decomposition}
 
-\part{The variation}\label{part:variation}
+\part{Internal and external}\label{part:variation}
 \include{case-competition-typology}
 \include{committee}
 
